<resources>
    <string name="app_name">Logical Quiz-Interview Test</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="shapes_image">Shapes Image</string>
    <string name="dots_image">Dots Image</string>
    <string name="arrows_image">Arrows Image</string>
    <string name="circles_image">Circles Image</string>
    <string name="job_interview_image">job interview image</string>
    <string name="toast_hint1">This is an alternating multiplication and subtracting series: First, multiply by 2 and then subtract 8.</string>
    <string name="toast_hint2">This is a simple multiplication series. Each number is 3 times more than the previous number.</string>
    <string name="toast_hint3">Coffee goes into a cup and .... goes into a bowl.</string>
    <string name="toast_hint4">An actor performs in a play. A .... performs at a concert.</string>
    <string name="toast_hint5">In each segment, the figure on the right and the figure on the left are the same; the figure in between is different</string>
    <string name="toast_hint6">Look carefully at the number of dots. The first segment goes from 5 to 3 to 1. The second segment goes from 1 to 3 to 5.</string>
    <string name="toast_hint7">All four segments use the same figures. In the first segment, the squares are on the outside of the circle and triangle. In the second segment, the squares are below the other two. In the third segment, the squares on are the inside.</string>
    <string name="toast_hint8">Each arrow in this continuing series moves a few degrees in a clockwise direction. Think of these arrows as the big hand on a clock. The first arrow is at noon. </string>
    <string name="toast_hint9">The middle letters are static, so concentrate on the first and third letters. The series involves an alphabetical order with a reversal of the letters. </string>
    <string name="toast_hint10">This series consists of letters in a reverse alphabetical order.</string>
    <string name="buttons_color">#004D40</string>
    <string name="message_out_of_time">Sorry, you were out of time. You can try the test again now.</string>
    <string name="message_one_minute_left">You have one minute left. Submit before time ends or you will loose the changes you have made</string>
    <string name="message_user_score">Your score is: </string>
    <string name="message_hint_button_pressed">/100.\nYou pressed hint button </string>
    <string name="message_times"> time(s) </string>
    <string name="message_correct_answers">\nCorrect answers: </string>
    <string name="text_question1">1. Look at this series:14, 28, 20, 40, 32, 64, ...  What number should come next?</string>
    <string name="text_question2">2. Look at this series: 2, 6, 18, 54, ...  What number should come next?</string>
    <string name="text_question3">3. Cup is to coffee as bowl is to:</string>
    <string name="text_question4">4. Play is to actor as concert is to:</string>
    <string name="text_question5">5. What shape should come next?</string>
    <string name="text_question6">6. Which segment should be next?</string>
    <string name="text_question7">7. Which image should come next?</string>
    <string name="text_question8">8. Which arrow should come next?</string>
    <string name="text_question9">9. Complete the series: FAG, GAF, HAI, IAH, ..., ...</string>
    <string name="text_question10">10. Complete the series: ..., QPO, NML, KJI,..., EDC</string>
    <string name="answer_52">52</string>
    <string name="answer_56">56</string>
    <string name="answer_96">96</string>
    <string name="answer_80">80</string>
    <string name="answer_108">108</string>
    <string name="answer_148">148</string>
    <string name="answer_162">162</string>
    <string name="answer_216">216</string>
    <string name="dish_answer">Dish</string>
    <string name="soup_answer">Soup</string>
    <string name="fork_answer">Fork</string>
    <string name="food_answer">Food</string>
    <string name="symphony_answer">Symphony</string>
    <string name="musician_answer">Musician</string>
    <string name="piano_answer">Piano</string>
    <string name="percussion_answer">Percussion</string>
    <string name="answer_1">1</string>
    <string name="answer_2">2</string>
    <string name="answer_3">3</string>
    <string name="answer_4">4</string>
    <string name="jak_answer">JAK</string>
    <string name="hal_answer">HAL</string>
    <string name="kaj_answer">KAJ</string>
    <string name="jai_answer">JAI</string>
    <string name="hgf_answer">HGF</string>
    <string name="cab_answer">CAB</string>
    <string name="jkl_answer">JKL</string>
    <string name="tsr_answer">TSR</string>
    <string name="submit_text_button">Submit</string>
    <string name="restart_text_button">Restart</string>
    <string name="text_details">This test evaluates your logical skills. You will have 10 minutes to complete it. There are 8 questions with a single correct answer and the last two ones need 2 answers. Each correct answer values 10 points, but if you click the hint button, you will loose 5 points, either your answer will be correct or not. You may need a pen and a piece of paper for this.</string>
    <string name="text_edit_text">Please, enter your name here</string>
    <string name="click_the_button_text">Click the button bellow if you are ready</string>
    <string name="button_start">Let\'s do it!</string>
    <string name="good_luck_text">Good luck, </string>
    <string name="enter_name_text">Please, enter your name </string>
</resources>
